# Orpheus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PROJECT_PROGRESS.md  README.md  README.zh.md  TASK.md  TEST_ISSUES_ANALYSIS.md  docker-compose.yml  docker.env  login.lua
.sqlx/: query-257c4014d7c065720f47be2b30485014b7e8a6a4789bc486c83e764017975ae2.json  query-b0805c8c346c674713b87be21671dc6d53e647a16a794bd7872a53d2955e39f1.json
archived_projects/orpheus-admin-panel/: README.md
archived_projects/orpheus-admin-panel/frontend/: README.md  package.json
examples/authentication/: README.md
examples/authentication/src/: config.rs
frontend/: README.zh.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  middlewares.rs  models.rs
src/auth/: session_store.rs  status.rs
src/handlers/: github_handler.rs  schema_handler.rs  session_handler.rs  user_handler.rs
src/middlewares/: session.rs
src/models/: response.rs  session.rs  user.rs
src/schema/: cache.rs  inspector.rs  mod.rs  types.rs
tests/: README.md  SCHEMA_TESTS_README.md  basic_tests.rs  common.rs  github_handler_tests.rs  integration_tests.rs  mod.rs  model_tests.rs  schema_inspector_tests.rs  session_handler_tests.rs  session_handler_tests_simple.rs  session_middleware_tests.rs  session_middleware_tests_simple.rs  session_store_tests.rs  simple_integration_tests.rs  user_handler_tests.rs  user_handler_tests_simple.rs
(+17 files in other folders)
