[package]
name = "orpheus"
version = "0.1.0"
edition = "2021"
description = "A Supabase-like backend service system built with Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/orpheus"
homepage = "https://github.com/yourusername/orpheus"

[[bin]]
name = "orpheus"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros","uuid"] }
dotenvy = "0.15.6"
anyhow = "1.0.100"
argon2 = "0.5" #用于密码哈希
rand_core = "0.10.0-rc-2" #用于生成随机盐
redis = { version = "0.23.1", features = ["tokio-comp", "connection-manager"] } #用于缓存和会话管理
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3" # 提供 Subscriber 实现，比如打印到终端
reqwest = { version = "0.12.24", features = ["json"] }
actix-cors = "0.6"
[dev-dependencies]
# 测试依赖（actix-web 的测试功能已包含在主依赖中）